# codesamples

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md
.githooks/hooks/: pre-commit
.github/workflows/: build_aws_images.yml
.gitlab-ci/: build_aws_images.yml
bash/: fizzbuzz.sh  fizzbuzz.sh~  trim_whitespace
c/: Makefile  README.md  fizzbuzz.c
c++/: Makefile  README.md  fizzbuzz.cpp
c/webserver_module/: Makefile  add_cookie.c  cookies.txt  delete_cookie.c  delete_cookies.c  extend_cookies.c  find_cookie.c  init_cookies.c  locate_cookie.c  main.c  readme.md  readme.md~  sort_cookies.c  test01.txt  test02.txt  webmodule.h
go/: README.md  fizzbuzz.go
go/fizzbuzz/: BUILD.bazel  MODULE.bazel  Makefile  README.md  clean_bazel.sh  fizzbuzz.go
go/numberadder/: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod  numberadder.go  numberadder_test.go  sampleoutput.txt  setup_bazel_env.sh  testoutput.txt
go/numberaddr/: Makefile  README.md  go.mod  numberadder.go  numberaddr_test.go  testoutput.txt
k8s_kind/: README.md  cleanup.sh  nginx-cluster.yaml  nginx-deployment-podman.yaml  nginx-deployment.yaml  nginx-service.yaml  run_cluster.sh  setup_cluster.sh
k8s_kind/utils/: install_tools.sh
k8s_kind/web_server/: Containerfile  Dockerfile  Dockerfile~
linker_example/: README.md
linker_example/src_c/: Makefile  README.md  (+4 more)
macro-11/: FIZZBUZZ.LST  FIZZBUZZ.MAC  README.md
openvox/: README.md  Vagrantfile  osbox.yml  setup_voxdev.ps1  setup_voxdev.sh
packer/: README.md
tcl/: fizzbuzz.tcl
terraform/: .gitignore  Makefile  README.md
zsh/: fizzbuzz.zsh
(+76 files in other folders)
